--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -72,4 +72,16 @@ jobs:
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest --build-config ${{ matrix.build_type }}
+      run: | 
+        ./tests/my_class_test |
+        lcov --capture --directory . --output-file coverage.info |
+        lcov --remove coverage.info  --output-file coverage_filtered.info '/usr/*' '*/CppUTest/*' '*/Platforms/Gcc/*' '*/tests/*' |
+        genhtml coverage_filtered.info --output-directory coverage_report
+
+      #run: ctest --build-config ${{ matrix.build_type }}
+    - name: Upload Artifact as Folder
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage_report
+        path: coverage_report.zip
+        retention-days: 30
