--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -36,7 +36,7 @@ jobs:
         exclude:
           - os: windows-latest
             c_compiler: cl
-            cpp_compiler: cl
+            #cpp_compiler: cl
           - os: windows-latest
             c_compiler: gcc
           - os: windows-latest
@@ -77,7 +77,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: | 
         ./tests/my_class_test
-      #run: ctest --build-config ${{ matrix.build_type }}
+      # run: ctest --build-config ${{ matrix.build_type }}
 
     - name: Generate Coverage report
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
