--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -84,8 +84,20 @@ jobs:
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        lcov --capture --directory . --output-file coverage.info |
-        lcov --remove coverage.info  --output-file coverage_filtered.info '/usr/*' '*/CppUTest/*' '*/Platforms/Gcc/*' '*/tests/*' |
+        lcov --capture --directory . --output-file coverage.info 
+
+    - name: Filter Coverage report
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: |
+        lcov --remove coverage.info  --output-file coverage_filtered.info '/usr/*' '*/CppUTest/*' '*/Platforms/Gcc/*' '*/tests/*'
+    
+    - name: HTML report
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: |
         genhtml coverage_filtered.info --output-directory coverage_report
   
     - name: Upload Artifact as Folder
