--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -30,13 +30,13 @@ jobs:
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
-          - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
         exclude:
           - os: windows-latest
             c_compiler: cl
             #cpp_compiler: cl
+          - os: ubuntu-latest
+            c_compiler: clang
+            #cpp_compiler: clang++
           - os: windows-latest
             c_compiler: gcc
           - os: windows-latest
