--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -99,16 +99,10 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
         genhtml coverage_filtered.info --output-directory coverage_report
-    
-    - name: Check files
-      run: ls
-
-    - name: Zip the Folder
-      run: zip -r coverage_report.zip build/coverage_report
 
     - name: Upload Artifact as Folder
       uses: actions/upload-artifact@v3
       with:
         name: coverage_report
-        path: coverage_report.zip
+        path: build/coverage_report
         retention-days: 30
