--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -100,9 +100,12 @@ jobs:
       run: |
         genhtml coverage_filtered.info --output-directory coverage_report
 
+    - name: Zip the Folder
+      run: zip -r coverage_report.zip build/coverage_report
+
     - name: Upload Artifact as Folder
       uses: actions/upload-artifact@v3
       with:
-        name: coverage_report
-        path: build/coverage_report
+        name: coverage
+        path: coverage_report.zip
         retention-days: 30
