--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -107,5 +107,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: coverage
-        path: coverage_report.zip
+        path: build/coverage_report
         retention-days: 30
